--- a/Bindings/Urho.iOS.csproj
+++ b/Bindings/Urho.iOS.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="iOS\ApiDefinition.cs" />
