--- a/Urho.Forms.nuspec
+++ b/Urho.Forms.nuspec
@@ -49,9 +49,9 @@
      <file src="docs/Urho.XML" target="lib/Xamarin.iOS10/Urho.Forms.XML" />
 	 
 	 <!--UWP-->
-     <file src="Nuget/UWP/UrhoSharp.Forms.targets" target="build/uap10.0" />
+     <!--<file src="Nuget/UWP/UrhoSharp.Forms.targets" target="build/uap10.0" />
      <file src="docs/Urho.XML" target="lib/uap10.0/Urho.Forms.XML" />
      <file src="Bin/UWP/Urho.Forms.dll" target="lib/uap10.0/Urho.Forms.dll" />
-     <file src="Bin/UWP/mono-urho.dll" target="native/UWP32/mono-urho.dll" />
+     <file src="Bin/UWP/mono-urho.dll" target="native/UWP32/mono-urho.dll" />-->
    </files>
 </package>
